feat: update transactions

--- a/content/building-blocks/1-transactions.mdx
+++ b/content/building-blocks/1-transactions.mdx
@@ -98,6 +98,7 @@ transaction(() => {
   - cons: low latency, blocking protocol (if coordinator or a participant goes down)
   - pros: strong consistency
 - use cases:
+- implementation: https://www.youtube.com/watch?v=oMhESvU87jM&list=PLsdq-3Z1EPT1wfRQo2xrrst2SGremT_qd
 
 ## Choosing dbs:
 
