--- a/content/sub-systems/2-subscription.mdx
+++ b/content/sub-systems/2-subscription.mdx
@@ -15,3 +15,19 @@ slug: /sub-systems/subscription
 
 - Ref:
   - https://www.youtube.com/watch?v=mL8MorfajQc
+
+## Saas subscription
+
+```js
+
+plans {
+  id: int,
+  name: enum('bronze', 'silver', 'gold')
+}
+
+subscriptions {
+  user_id: int,
+  plan_id: int,
+  status: enum('active', 'incomplete', 'past_due')
+}
+```
