feat: update wide column store

--- a/content/building-blocks/3-wide-column-stores.mdx
+++ b/content/building-blocks/3-wide-column-stores.mdx
@@ -46,6 +46,15 @@ users {
 }
 ```
 
+## HBase/BigTable (google crawler)
+
+<img src="/building-blocks/hbase.png" style={{ width: 700 }} alt="crate.io" />
+
+- Each column family keeps different versions of data based on timestamps?
+  - the #maxVersions is configurable
+- why `com.google`?
+  - comparing `videos.google.com` & `images.google.com` would far away
+
 ## Cassandra Ref
 
 - https://tech.ebayinc.com/engineering/cassandra-data-modeling-best-practices-part-1/
