feat: update wide-column stores

--- a/content/building-blocks/3-wide-column-stores.mdx
+++ b/content/building-blocks/3-wide-column-stores.mdx
@@ -55,6 +55,8 @@ users {
 - why `com.google`?
   - comparing `videos.google.com` & `images.google.com` would far away
 
+<img src="/building-blocks/hbase-2.png" style={{ width: 700 }} alt="crate.io" />
+
 ## Cassandra Ref
 
 - https://tech.ebayinc.com/engineering/cassandra-data-modeling-best-practices-part-1/
