feat: update transaction

--- a/content/building-blocks/1-transactions.mdx
+++ b/content/building-blocks/1-transactions.mdx
@@ -17,6 +17,7 @@ slug: /building-blocks/transactions
   - diff isolation levels
 - durability
   - once commit is done, all changes is persisted to disk and inreversible
+  - how? WAL records (write-ahead log) must be written to WAL segment in the disk
 
 ## Use cases
 
