feat: update replication

--- a/content/building-blocks/8-replications.mdx
+++ b/content/building-blocks/8-replications.mdx
@@ -9,6 +9,7 @@ slug: /building-blocks/replication-arch
 - Improve performance
   - Higher throughput: 1 master handles reads, slaves handle writes
   - Lower latency: region-based replicas
+  - Avoid hotspot, one machine handles all reads and writes
 
 ## Why not? (cons)
 
