feat: update consistency

--- a/content/building-blocks/9-consistency.mdx
+++ b/content/building-blocks/9-consistency.mdx
@@ -9,3 +9,9 @@ All systems need consistency, but the level of consistency could be different
 
 - Strong
 - Eventual
+
+## Consistency in Contexts
+
+- Replication context: consider master-slaves architecture
+  - less **consistency**: (1) write to master, (2) write is successful, (3) propagation to slaves is done async
+  - high **consistency**: (1) write to master, (2) propagate update to all slaves synchronously, (3) write is successfull
