feat: kafka demo

--- a/content/building-blocks/2-message-queue.mdx
+++ b/content/building-blocks/2-message-queue.mdx
@@ -127,3 +127,4 @@ https://www.youtube.com/watch?v=oUJbuFMyBDk&list=PLMCXHnjXnTnvo6alSjVkgxV-VH6EPy
 - reliability:
   - persists messages in disk
   - keep messages after being consumed by consumers. why? retry, new consumers join, fast recover for failed brokers
+  - server.properties: `log.retention.hours=168`
