feat: update api gateway

--- a/content/building-blocks/6-api-gateway.mdx
+++ b/content/building-blocks/6-api-gateway.mdx
@@ -8,7 +8,8 @@ slug: /building-blocks/api-gateway
 
   - External APIs
   - Contract btw client and microservices
-  - Abstraction layer, remove deps of client on microservices
+  - Abstraction layer, remove deps of client on microservices (otherwise, clients call services directly)
+  - where security are enforced so that can be loosen internally
 
 - Techniques
 
