feat: update whatsapp one to one

--- a/content/whatsapp/2-one-to-one.mdx
+++ b/content/whatsapp/2-one-to-one.mdx
@@ -47,13 +47,15 @@ slug: /whatsapp/one-to-one-chat
 
 ## Advanced setup
 
-<img src="/whatsapp/one-to-one.png" style={{ width: 500 }} alt="crate.io" />
+<img src="/whatsapp/msg_status.png" style={{ width: 300 }} alt="crate.io" />
 
 - message status:
 
   - sent: persist to database
   - delivered: persist to receiver's phone (may not read yet)
   - read: seen (configurable)
+
+<img src="/whatsapp/one-to-one.png" style={{ width: 500 }} alt="crate.io" />
 
 - `userA` sends message to `userB` flow
   - assuming both connect to different servers (gateways)
