feat: message queue updated

--- a/content/building-blocks/2-message-queue.mdx
+++ b/content/building-blocks/2-message-queue.mdx
@@ -15,6 +15,9 @@ slug: /building-blocks/message-queue
 - Traffic peaks
   - many to one
   - analytics service: receive events from all directions of the system
+- ensure reqs are gonna be handled
+  - retries multiple times if it fails
+  - after configurable amount of times, returns error msg
 
 ## What?
 
