--- a/content/building-blocks/5-sharding.mdx
+++ b/content/building-blocks/5-sharding.mdx
@@ -7,11 +7,18 @@ slug: /building-blocks/sharding
 
 - when amount of data grows up, can not be fit into one single machine. it's time to split it up into smaller chunks,
   and put each chunk into one single machine so that you can scale infinitely.
+- benefits:
+  - horizontal scaling
+  - reduce workload for database (reads and writes)
+  - reduce latency as there's less data in each shard
 
 ## Problems?
 
 - Must be a consistent way of writing a new record to database
 - Must be a way to know find which machine a record resides in
+- Cross-shards reads are difficult
+  - know your queries first before sharding
+  - example: fetching group chat messages must be done in one shard
 
 ## Context?
 
@@ -39,6 +46,7 @@ slug: /building-blocks/sharding
   - pros:
   - cons:
     - SoF: use replicas
+  - consecutive keys are likely to be in the same shard
 
 - Consistent hashing
   - why? avoid remapping everything
