--- a/content/building-blocks/14-web-socket.mdx
+++ b/content/building-blocks/14-web-socket.mdx
@@ -11,6 +11,16 @@ slug: /building-blocks/web-socket
 - websocket is a level 7 protocol
 - use cases(real-time app): multi-player games, group chat (discord, slack, fb messenger), financial trading apps
 
+## models
+
+- pull:
+  - REST: client reqs, server responds with data
+  - polling (chat app: do you have any new messages for me?)
+  - heartbeat (I'm alive)
+- push:
+  - APNs (apple push notif) / GCM (google cloud messaging)
+  - web socket (persistent conn)
+
 ## naive setup
 
 - single ws server, acts as a pubsub itself
