feat: whatsapp updated

--- a/content/whatsapp/1-intro.mdx
+++ b/content/whatsapp/1-intro.mdx
@@ -10,4 +10,11 @@ slug: /whatsapp/intro
 - persistent/temporary msg
 - presence (online/last seen)
 - sent/read receipt
-- ~~image sharding~~
+- ~~image sharing~~
+
+## problems to get into?
+
+- message ordering?
+- notifications?
+- how to scale `SessionService`?
+- what if a WsServer is down? how to handle that?
