feat: websocket updated

--- a/content/building-blocks/14-web-socket.mdx
+++ b/content/building-blocks/14-web-socket.mdx
@@ -16,10 +16,10 @@ slug: /building-blocks/web-socket
 - pull:
   - REST: client reqs, server responds with data
   - polling (chat app: do you have any new messages for me?)
-  - heartbeat (I'm alive)
 - push:
   - APNs (apple push notif) / GCM (google cloud messaging)
   - web socket (persistent conn)
+  - heartbeat (online/offline presense feature: `I'm alive`,...)
 
 ## naive setup
 
