--- a/content/building-blocks/9-consistency.mdx
+++ b/content/building-blocks/9-consistency.mdx
@@ -13,8 +13,24 @@ All systems need consistency, but the level of consistency could be different
 ## Consistency in Contexts
 
 - Replication context: consider master-slaves architecture
+
   - less **consistency** (eventual consistency):
     - (1) write to master,
     - (2) write is successful,
     - (3) propagation to slaves is done async
-  - high **consistency**: (1) write to master, (2) propagate update to all slaves synchronously, (3) write is successfull
+  - high **consistency**:
+    - (1) write to master,
+    - (2) propagate update to all slaves synchronously,
+    - (3) write is successfull
+
+- Delegation context:
+
+  - eventual consistency:
+    - (1) create new blog
+    - (2) delegate job incrementing blog_count of user to kafka
+    - (3) returns success => async job could take a while to run, causing inconsistency btw blog_count in UI and real number of blogs
+
+- ACID Database Transaction context
+  - conrrectness through defined rules:
+    - account balance >+ 0, stock quantity >= 0 (`constraint`)
+    - no orphan comment (`cascade`)
