feat: transactions updated

--- a/content/building-blocks/1-transactions.mdx
+++ b/content/building-blocks/1-transactions.mdx
@@ -272,6 +272,11 @@ update movie set is_booked = true, booked_by = 'thanh' where id = 1;
 
 ## isolation levels
 
+1. read uncommited
+2. read commited
+3. repeatable reads
+4. serializable
+
 - read committed (default) => works most of the time
 
 ```js
